--- a/.github/workflows/check-example-compatibility.yaml
+++ b/.github/workflows/check-example-compatibility.yaml
@@ -30,24 +30,35 @@ jobs:
           repository: illuminator-team/educational_material
           path: educational_material
 
-      # Create conda environment called illuminator-examples
+      # Create conda environment called illuminator
       - uses: conda-incubator/setup-miniconda@v3
         with:
-          activate-environment: illuminator-examples
+          activate-environment: illuminator
           auto-activate-base: false
 
-      # Update environment with the packages from educational_material/environment.yml
-      - name: Create conda environment from educational_material/environment.yml
-        run: conda env update -n illuminator-examples -f educational_material/environment.yml
+      # Update illuminator conda environment with the packages from environment.yml
+      - name: Create conda environment from environment.yml
+        run: conda env update -n illuminator -f environment.yml
 
-      # Uninstall the illuminator from the environment
+      # Uninstall the Illuminator from the environment (we want to build from source)
       - name: Uninstall Illuminator from illuminator-examples environment
         shell: bash -l {0}
         run: |
           pip freeze
           echo "--------------- HELLO ----------------"
-          pip uninstall illuminator
+          pip uninstall -y illuminator
 
+      # Install the Illuminator from the current commit (build it from source)
+      - name: Install the Illuminator from the current commit
+        shell: bash -l {0}
+        run: |
+          pip freeze
+          illuminator --version
+          echo "--------------- HELLO ----------------"
+          git status
+          echo "--------------- HELLO ----------------"
+          pip install .
+          illuminator --version
 
       # # A comment for this step
       # - name: Test
