--- a/.github/workflows/check-example-compatibility-conda.yaml
+++ b/.github/workflows/check-example-compatibility-conda.yaml
@@ -1,4 +1,4 @@
-name: Check Compatibility with Examples
+name: Check Compatibility with Examples (Conda)
 
 # Workflow triggers tell GitHub when to run the workflow:
 # a) when there is a new commit on the main or develop branch
@@ -24,11 +24,21 @@ jobs:
       # https://github.com/actions/checkout
       - uses: actions/checkout@v4
 
-      # # Create conda environment called illuminator
-      # - uses: conda-incubator/setup-miniconda@v3
-      #   with:
-      #     activate-environment: illuminator
-      #     auto-activate-base: false
+      # Create conda environment called illuminator
+      - uses: conda-incubator/setup-miniconda@v3
+        with:
+          activate-environment: illuminator
+          auto-activate-base: false
+
+      # Update illuminator conda environment with the packages from environment.yml
+      - name: Create conda environment from environment.yml
+        run: conda env update -n illuminator -f environment.yml
+
+      # Uninstall the Illuminator from the environment (we want to build from source)
+      - name: Uninstall Illuminator from illuminator-examples environment
+        shell: bash -l {0}
+        run: |
+          pip uninstall -y illuminator
 
       # Install the Illuminator using the current commit (build it from source)
       - name: Install the Illuminator from the current commit
